feat(resolution): add bulk resolution endpoints